JMIA-7198 - threshold create API
