# driver-adapters/http-in/src/main/java/com/jumia/skylens/http/in/controllers/ConfigurationController.java
@@ -1,0 +1,23 @@
+package com.jumia.skylens.http.in.controllers;
+
+import com.jumia.skylens.http.in.model.ReportType;
+import com.jumia.skylens.http.in.model.ThresholdRequest;
+import com.jumia.skylens.http.in.model.ThresholdResponse;
+import com.jumia.skylens.http.in.services.ConfigurationService;
+import lombok.RequiredArgsConstructor;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequiredArgsConstructor
+public class ConfigurationController implements ConfigurationApi {
+
+    private final ConfigurationService configurationService;
+
+    @Override
+    public ThresholdResponse setThresholdTarget(final String country,
+                                                final ReportType reportType,
+                                                final ThresholdRequest request) {
+
+        return configurationService.setThresholdTarget(country, reportType, request);
+    }
+}
