# driver-adapters/http-in/src/main/java/com/jumia/skylens/http/in/converters/ThresholdResponseConverter.java
@@ -1,0 +1,25 @@
+package com.jumia.skylens.http.in.converters;
+
+import com.jumia.skylens.commons.converters.Converter;
+import com.jumia.skylens.domain.catalog.NetworkThreshold;
+import com.jumia.skylens.http.in.model.ThresholdResponse;
+import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
+import org.mapstruct.MappingConstants;
+
+import java.time.LocalDateTime;
+import java.time.OffsetDateTime;
+import java.time.ZoneOffset;
+
+@Mapper(componentModel = MappingConstants.ComponentModel.SPRING)
+public interface ThresholdResponseConverter extends Converter<NetworkThreshold, ThresholdResponse> {
+
+    @Override
+    @Mapping(target = "targetRate", source = "threshold")
+    ThresholdResponse convert(NetworkThreshold source);
+
+    default OffsetDateTime map(LocalDateTime value) {
+
+        return value != null ? value.atOffset(ZoneOffset.UTC) : null;
+    }
+}
